--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="lg:w-1/2 z-10 text-center lg:text-left w-full min-w-0">
                 <h1 class="text-3xl sm:text-4xl lg:text-6xl font-extrabold text-slate-900 leading-tight mb-6 px-0" data-aos="fade-up" data-aos-delay="100">
                     Hapus Budaya "Input Ulang". <br>
-                    <span class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-blue-400">Sync Donasiaja.id ke Jurnal</span> Detik Itu Juga.
+                    <span class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-blue-400">Sync Donasiaja.id ke Zains.net</span> Detik Itu Juga.
                 </h1>
                 <p class="text-base sm:text-lg text-slate-600 mb-8 leading-relaxed px-0" data-aos="fade-up" data-aos-delay="200">
                     Portal Dashboard untuk menghubungkan wordpress <b>DonasiAja.id</b> Anda langsung ke sistem akuntansi <b>Zains.net</b>. 
